finalproject/force-app/main/default/objects/Search__c/Search__c.object-meta.xml
<CustomObject>
    <label>Search</label>
    <nameField>
        <displayFormat>Search-{0000}</displayFormat>
        <label>Search Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>