finalproject/force-app/main/default/objects/Search__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <label>Search Date</label>
    <type>Date</type>
</CustomField>